# hypershift-demo

./: .gitignore  README.md  approve-agents.sh  attach-to-network.sh  create-agent-cluster.sh  create-virt-cluster.sh  create-virt-ingress-lb.sh  import-nodes.sh  pyproject.toml  update-agents.sh
clusters/london/: kustomization.yaml
clusters/london/core/namespaces/clusters/: namespace.yaml
clusters/london/core/secrets/london-etcd-encryption-key/: secret.yaml.sample
clusters/london/core/secrets/london-pull-secret/: secret.yaml.sample
clusters/london/core/secrets/london-ssh-key/: secret.yaml.sample
clusters/london/hypershift.openshift.io/hostedclusters/london/: hostedcluster.yaml
clusters/london/hypershift.openshift.io/nodepools/london/: nodepool.yaml
clusters/london/rbac.authorization.k8s.io/roles/capi-provider-role/: role.yaml
infraenv/: infraenv.yaml  kustomization.yaml
